--- a/Hovos/Views/Base.lproj/Main.storyboard
+++ b/Hovos/Views/Base.lproj/Main.storyboard
@@ -1377,8 +1377,8 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Nearby Hosts who need help" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bL1-xp-z0o" customClass="CustomLabels" customModule="Hovos" customModuleProvider="target">
-                                                            <rect key="frame" x="20" y="-47" width="254" height="144"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nearby Hosts who need help" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bL1-xp-z0o" customClass="CustomLabels" customModule="Hovos" customModuleProvider="target">
+                                                            <rect key="frame" x="335" y="-47" width="254" height="144"/>
                                                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="20"/>
                                                             <color key="textColor" name="orangeColor"/>
                                                             <nil key="highlightedColor"/>
@@ -1386,8 +1386,8 @@
                                                                 <userDefinedRuntimeAttribute type="boolean" keyPath="isComplete" value="YES"/>
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
-                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s9S-gO-8cd">
-                                                            <rect key="frame" x="20" y="-47" width="335" height="32"/>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s9S-gO-8cd">
+                                                            <rect key="frame" x="335" y="-47" width="30" height="32"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                             <connections>
                                                                 <action selector="loadHosts:" destination="Ate-wP-Y9X" eventType="touchUpInside" id="vBc-0k-oqG"/>
@@ -1400,8 +1400,8 @@
                                                                 <constraint firstAttribute="height" constant="250" id="b0A-Y5-NPz"/>
                                                             </constraints>
                                                         </view>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="orangeAngle" translatesAutoresizingMaskIntoConstraints="NO" id="iHY-1S-6S8">
-                                                            <rect key="frame" x="291" y="10" width="64" height="30"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="orangeAngle" translatesAutoresizingMaskIntoConstraints="NO" id="iHY-1S-6S8">
+                                                            <rect key="frame" x="333" y="10" width="32" height="30"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="30" id="45k-xt-ZYD"/>
                                                             </constraints>
@@ -1411,16 +1411,18 @@
                                                     <constraints>
                                                         <constraint firstItem="s9S-gO-8cd" firstAttribute="top" secondItem="bL1-xp-z0o" secondAttribute="top" id="01J-St-9JZ"/>
                                                         <constraint firstItem="bL1-xp-z0o" firstAttribute="centerY" secondItem="iHY-1S-6S8" secondAttribute="centerY" id="08x-Rr-rRz"/>
+                                                        <constraint firstItem="iHY-1S-6S8" firstAttribute="trailing" secondItem="MXJ-4g-FvX" secondAttribute="trailing" id="0wj-jk-IaU"/>
                                                         <constraint firstItem="dmF-c4-UGy" firstAttribute="top" secondItem="MXJ-4g-FvX" secondAttribute="bottom" constant="5" id="3z8-dR-COH"/>
                                                         <constraint firstItem="iHY-1S-6S8" firstAttribute="top" secondItem="8md-Uc-gFU" secondAttribute="top" constant="10" id="87F-EG-puz"/>
                                                         <constraint firstItem="s9S-gO-8cd" firstAttribute="trailing" secondItem="iHY-1S-6S8" secondAttribute="trailing" id="DLV-Iz-Ie0"/>
-                                                        <constraint firstAttribute="trailing" secondItem="MXJ-4g-FvX" secondAttribute="trailing" id="KiA-IA-cNl"/>
-                                                        <constraint firstItem="MXJ-4g-FvX" firstAttribute="leading" secondItem="8md-Uc-gFU" secondAttribute="leading" id="WAS-kJ-uH3"/>
-                                                        <constraint firstAttribute="trailing" secondItem="dmF-c4-UGy" secondAttribute="trailing" constant="20" id="aFf-jx-has"/>
+                                                        <constraint firstAttribute="trailing" secondItem="MXJ-4g-FvX" secondAttribute="trailing" constant="-10" id="KiA-IA-cNl"/>
+                                                        <constraint firstItem="s9S-gO-8cd" firstAttribute="leading" secondItem="MXJ-4g-FvX" secondAttribute="leading" id="Rja-AQ-VBe"/>
+                                                        <constraint firstItem="MXJ-4g-FvX" firstAttribute="leading" secondItem="8md-Uc-gFU" secondAttribute="leading" constant="10" id="WAS-kJ-uH3"/>
+                                                        <constraint firstAttribute="trailing" secondItem="dmF-c4-UGy" secondAttribute="trailing" constant="10" id="aFf-jx-has"/>
                                                         <constraint firstItem="s9S-gO-8cd" firstAttribute="leading" secondItem="bL1-xp-z0o" secondAttribute="leading" id="e3w-L2-oUk"/>
                                                         <constraint firstItem="MXJ-4g-FvX" firstAttribute="top" secondItem="s9S-gO-8cd" secondAttribute="bottom" constant="5" id="l8U-Nj-EHJ"/>
                                                         <constraint firstAttribute="bottom" secondItem="dmF-c4-UGy" secondAttribute="bottom" constant="5" id="mMQ-IT-7ei"/>
-                                                        <constraint firstItem="dmF-c4-UGy" firstAttribute="leading" secondItem="8md-Uc-gFU" secondAttribute="leading" constant="20" id="y7E-9u-hHi"/>
+                                                        <constraint firstItem="dmF-c4-UGy" firstAttribute="leading" secondItem="8md-Uc-gFU" secondAttribute="leading" constant="10" id="y7E-9u-hHi"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
