--- a/Hovos/Views/Base.lproj/Main.storyboard
+++ b/Hovos/Views/Base.lproj/Main.storyboard
@@ -1393,7 +1393,7 @@
                                                                 <action selector="loadHosts:" destination="Ate-wP-Y9X" eventType="touchUpInside" id="vBc-0k-oqG"/>
                                                             </connections>
                                                         </button>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MXJ-4g-FvX">
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MXJ-4g-FvX" customClass="GMSMapView">
                                                             <rect key="frame" x="10" y="42" width="345" height="250"/>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                             <constraints>
@@ -1401,7 +1401,7 @@
                                                             </constraints>
                                                         </view>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="orangeAngle" translatesAutoresizingMaskIntoConstraints="NO" id="iHY-1S-6S8">
-                                                            <rect key="frame" x="323" y="10" width="32" height="30"/>
+                                                            <rect key="frame" x="291" y="10" width="64" height="30"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="30" id="45k-xt-ZYD"/>
                                                             </constraints>
@@ -1940,7 +1940,7 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueAngle" translatesAutoresizingMaskIntoConstraints="NO" id="bN7-Bi-IxK">
-                                                            <rect key="frame" x="333" y="5" width="32" height="30"/>
+                                                            <rect key="frame" x="301" y="5" width="64" height="30"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="30" id="CmP-so-xAP"/>
                                                             </constraints>
@@ -3199,19 +3199,19 @@
                                                                     </constraints>
                                                                 </imageView>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gJR-Cl-EZL">
-                                                                    <rect key="frame" x="0.0" y="122" width="371" height="76"/>
+                                                                    <rect key="frame" x="0.0" y="82" width="371" height="116"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="251" image="v_small7" translatesAutoresizingMaskIntoConstraints="NO" id="bj9-4K-2iM">
-                                                                            <rect key="frame" x="15" y="10" width="41" height="56"/>
+                                                                            <rect key="frame" x="15" y="10" width="82" height="96"/>
                                                                         </imageView>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sqf-Wg-x63">
-                                                                            <rect key="frame" x="71" y="10" width="285" height="25.5"/>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sqf-Wg-x63">
+                                                                            <rect key="frame" x="112" y="10" width="244" height="25.5"/>
                                                                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="21"/>
                                                                             <color key="textColor" name="greenColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8G1-gW-pTw" customClass="CustomLabels" customModule="Hovos" customModuleProvider="target">
-                                                                            <rect key="frame" x="71" y="45.5" width="290" height="20.5"/>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8G1-gW-pTw" customClass="CustomLabels" customModule="Hovos" customModuleProvider="target">
+                                                                            <rect key="frame" x="112" y="45.5" width="249" height="20.5"/>
                                                                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="17"/>
                                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <nil key="highlightedColor"/>
@@ -3357,10 +3357,10 @@
                                                                     </constraints>
                                                                     <prototypes>
                                                                         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CountryCell" id="Fsq-pZ-KYG" customClass="CountryCell" customModule="Hovos" customModuleProvider="target">
-                                                                            <rect key="frame" x="0.0" y="28" width="351" height="43.5"/>
+                                                                            <rect key="frame" x="0.0" y="28" width="351" height="44"/>
                                                                             <autoresizingMask key="autoresizingMask"/>
                                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fsq-pZ-KYG" id="tii-70-CSk">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="351" height="43.5"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="351" height="44"/>
                                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                                 <subviews>
                                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueAngle" translatesAutoresizingMaskIntoConstraints="NO" id="5wi-nC-LzU">
@@ -3766,7 +3766,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pH0-W5-pMZ">
-                                        <rect key="frame" x="241.5" y="12.5" width="30" height="25"/>
+                                        <rect key="frame" x="241.5" y="0.0" width="60" height="50"/>
                                         <state key="normal" image="heart"/>
                                         <state key="selected" image="heart_checked"/>
                                         <connections>
